[package]
name = "rebenchdb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sysinfo = "0.30.5"
time = { version = "0.3.31", features = ["formatting", "serde", "parsing"] }
ureq = { version = "2.9.1", features = ["json"] }
